k8s/app/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: flask-realworld-example-app
  labels:
    app: flask-realworld-example-app
spec:
  selector:
    app: flask-realworld-example-app
  type: ClusterIP
  ports:
    - name: flask-realworld-example-app-tcp-port
      port: 5000
