k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /flask(/|$)(.*)
        backend:
          serviceName: flask-realworld-example-app
          servicePort: 5000
